<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/choosetext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:padding="10dp"
        android:text="@string/choose"/>
    <Spinner
        android:id="@+id/spinner"
        android:layout_below="@id/choosetext"
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        />
    <Button
        android:id="@+id/addPc"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:text="@string/add"
        android:layout_below="@id/choosetext"
        android:layout_toEndOf="@id/spinner"
        />
    <EditText
        android:id="@+id/pcNumInput"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:textAlignment="center"
        android:text="@string/pcDefault"
        android:layout_below="@id/addPc"
        android:layout_alignStart="@id/addPc"
        android:inputType="number"
        android:autofillHints="1" />
    <Button
        android:id="@+id/minusPc"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:text="@string/minus"
        android:layout_below="@id/pcNumInput"
        android:layout_toEndOf="@id/spinner"
        />
    <EditText
        android:id="@+id/nameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner"
        android:hint="@string/nameHint"
        />
    <TextView
        android:id="@+id/addonText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addons"
        android:textSize="20sp"
        android:padding="10dp"
        android:layout_below="@id/spinner"
        android:layout_marginTop="30dp"
        />
    <CheckBox
        android:id="@+id/keyboardCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addonText"
        android:text="@string/keyboard"
        />
    <Spinner
        android:id="@+id/spinnerKb"
        android:visibility="gone"
        android:layout_below="@id/keyboardCheck"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        />
    <CheckBox
        android:id="@+id/mouseCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinnerKb"
        android:text="@string/mouse"
        />
    <Spinner
        android:id="@+id/spinnerMouse"
        android:visibility="gone"
        android:layout_below="@id/mouseCheck"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        />
    <CheckBox
        android:id="@+id/monitorCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinnerMouse"
        android:text="@string/monitor"
        />
    <Spinner
        android:id="@+id/spinnerMonitor"
        android:visibility="gone"
        android:layout_below="@id/monitorCheck"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        />
    <TextView
        android:id="@+id/priceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:layout_above="@id/priceValue"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="30dp"
        android:textSize="25sp"
        />
    <TextView
        android:id="@+id/priceValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:textSize="15sp"
        android:text="@string/pricePlaceholder"
        />
    <Button
        android:id="@+id/orderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/orderbttn"
        android:textSize="20sp"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>