<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">
    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_centerHorizontal="true"
        android:textSize="50sp"
        android:layout_marginTop="50dp"/>
    <EditText
        android:id="@+id/loginInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginText"
        android:layout_marginTop="100dp"
        android:hint="@string/login"
        android:inputType="text" />
    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginInput"
        android:hint="@string/password"
        android:inputType="textPassword" />
    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordInput"
        android:hint="@string/confirm_password"
        android:inputType="textPassword" />
    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/confirmPassword"
        android:text="@string/register"
        android:layout_marginTop="50dp"
        />
    <TextView
        android:id="@+id/noAccountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerButton"
        android:text="@string/has_account"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:layout_marginTop="20dp"/>
    <Button
        android:id="@+id/goLoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/noAccountText"
        android:text="@string/log_in"
        android:layout_marginTop="10dp"/>

</RelativeLayout>