<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmedActivity">

    <TextView
        android:id="@+id/confirmed_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order_sent"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_marginTop="100dp"
        />
    <ImageView
        android:id="@+id/confirmed_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/ic_confirmed_order"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/confirmed_text"
        android:contentDescription="@string/order_sent" />
    <Button
        android:id="@+id/sendEmailButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_email"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/confirmed_image"
        android:layout_marginTop="50dp"/>
    <Button
        android:id="@+id/sendSMSButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_sms"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/sendEmailButton" />
    <Button
        android:id="@+id/returnButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/returntomenu"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/sendSMSButton" />
</RelativeLayout>