<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderConfirm">
    <ListView
        android:id="@+id/orderList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/textAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pcamount"
        android:layout_below="@id/orderList"
        android:layout_alignParentEnd="true"
        android:textSize="20sp"
        android:layout_marginEnd="10dp"/>
    <TextView
        android:id="@+id/textPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:layout_below="@id/textAmount"
        android:layout_alignParentEnd="true"
        android:textSize="20sp"
        android:layout_marginEnd="10dp"/>
    <Button
        android:id="@+id/confirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/confirm_order"/>

</RelativeLayout>